Updated .netcore.UWP to 6.2.12. Added Sqlite 5.0.3. Added some code clearly marked between //SQLite testing comments, it works to load in data to a collection and is uploaded as a point of reference.

--- a/GoldStarr-YSYS-OP1-Grupp 6/GoldStarr-YSYS-OP1-Grupp 6.csproj
+++ b/GoldStarr-YSYS-OP1-Grupp 6/GoldStarr-YSYS-OP1-Grupp 6.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Classes\Customer.cs" />
     <Compile Include="Classes\CustomerOrder.cs" />
     <Compile Include="Classes\Merchandise.cs" />
+    <Compile Include="Classes\SqliteDataAccess.cs" />
     <Compile Include="Classes\TempStores.cs" />
     <Compile Include="InFramePages\CustomerList.xaml.cs">
       <DependentUpon>CustomerList.xaml</DependentUpon>
@@ -197,14 +198,33 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Dapper">
+      <Version>2.0.78</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Data.Sqlite">
+      <Version>5.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Data.Sqlite.Core">
+      <Version>5.0.3</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.10</Version>
+      <Version>6.2.12</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
+    <PackageReference Include="SQLitePCLRaw.bundle_winsqlite3">
+      <Version>2.0.4</Version>
+    </PackageReference>
+    <PackageReference Include="SQLitePCLRaw.core">
+      <Version>2.0.4</Version>
+    </PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="bin\x64\Debug\Data\Merchandise.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
